tests/fixtures/effect-compiler/errors/EFX3200.effect
CCEffect %{
  techniques:
  - passes:
    - vert: vs:test
      frag: fs:test
      switch: IN_SHADER_DEFINE
}%

CCProgram vs %{
  precision mediump float;
  #pragma define-meta IN_SHADER_DEFINE range([0, 3])
  vec4 test () {}
}%

CCProgram fs %{
  precision mediump float;
  vec4 test () {}
}%
